# inoli

./: Cargo.toml  README.md
src/: appraiser.rs  bio.rs  command.rs  devices.rs  error.rs  hardware.rs  icons.rs  ipc.rs  macros.rs  main.rs  services.rs
src/devices/: alert.rs  bluetooth.rs  generic.rs  heartrate.rs  miband.rs  mod.rs
src/devices/capabilities/: alarm.rs  alert.rs  battery.rs  heartrate.rs  mod.rs  steps.rs
src/hardware/: adxl362.rs
tui/: go.mod  main.go
tui/icons/: icons.go
tui/ipc/: ipc.go
tui/ipc/command/: command.go
tui/ipc/message/: message.go
