[package]
name = "inoli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
chrono = "0.4"
crc = "3.0"
futures = "0.3"
uuid = "1.1"
async-trait = "0.1"
thiserror = "1.0"

[dependencies.tokio]
version = "1.21"
features = [ "full" ]

[dependencies.bluer]
version = "0.15"
features = [ "bluetoothd" ]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from", "deref"]
