[package]
name = "inoli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
byteorder = "1"
env_logger = "0.9"
chrono = "0.4"
crc = "3.0"
futures = "0.3"
uuid = "1.3"
async-trait = "0.1"
thiserror = "1.0"
automod = "1.0"
clap = { version = "4.1", features = [ "derive" ] }

[dependencies.log]
version = "0.4"
features = [ "max_level_debug", "release_max_level_warn" ]

[dependencies.phf]
version = "0.11"
features = [ "macros" ]

[dependencies.tokio]
version = "1.27"
features = [ "rt", "macros" ]

[dependencies.bluer]
version = "0.15"
features = [ "bluetoothd" ]

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from", "deref"]
